src/_includes/components/header/_base.scss
@use '../../../stylesheets/mixin/breakpoints.scss' as bp;
@use '../../../stylesheets/mixin/colours.scss' as colours;
@use '../../../stylesheets/mixin/grids.scss' as grids;


@mixin header-base(){
    @include grids.main-grid();
    .header-inner {
        display: flex;
        flex-direction: row;
        height: 100%;
    }

    .header-logo {
        transition: color .3s, fill .3s;
        &:hover, &:focus {
            background: unset;
            color: colours.$text-primary;
            path {
                fill: colours.$text-primary;
            }
        }
    }

    a {
        &:hover, &:focus {
            color: colours.$text-primary;
            font-weight: 600;
        }
        display: flex;
        gap: .5rem;
        align-items: center;
        text-decoration: none;
        color: colours.$text-subdued;
        font-family: 'mondwest';
        font-weight: bold;
        font-size: 1.5rem;
        transition: background-size .75s, background-color 1s, font-weight .3s;
    }

    ul {
        display: flex;
        list-style-type: '';
        margin-block-start: 0;
        margin-block-end: 0;
        padding-inline-start: 0;
        li {
            width: 100%;
            a {
                font-family: 'overpass';
                font-weight: 400;
                text-align: center;
            }
        }
    }

    button {
        white-space: nowrap;
    }
}

